# robot

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  output  pyproject.toml  requirements.txt  robot.env  robot.env.example
.github/workflows/: ci.yml  docker-build.yml
docs/: architechture.md  architecture.md  deployment.md  governence.md  release_checklist.md
examples/built-from-metadata-crate/: ro-crate-metadata.json
examples/built-from-metadata-crate/model/: model.xml
examples/minimal-pbpk-metadata/: pbpk-metadata.json
examples/minimal-pbpk-rocrate/: ro-crate-metadata.json
examples/minimal-pbpk-rocrate/data/: parameters.csv
examples/minimal-pbpk-rocrate/docs/: reproducibility.md
tests/: conftest.py  test_qaop_rocrate_builder.py  test_qaop_validation.py  test_robot_critical_flows.py
