[project]
name = "robot"
version = "0.1.0"
description = "research object builder for open toxicology"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.128.5",
    "jsonschema>=4.26.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "toml-to-requirements>=0.3.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.28.1",
]
